--- a/editmodule/index.html
+++ b/editmodule/index.html
@@ -384,6 +384,10 @@ end
 --  /api/module/cgame/draw
 -- If a command has no extra arguments, you can simply post an empty body (I think)
 
+-- If you utilize the "subcommands" automatic parsing (please do), you ALSO get
+-- access to the parsed subcommand info when you search for modules. This way,
+-- clients can auto-generate help for module commands
+
 -- Module activity shows up in regular activity, you can chain to "module" to 
 -- get the name/etc. Modules have associated values which can be read IN the
 -- module itself, you can use these as constants to tweak your code without having
