--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@ if (location.protocol !== "https:") {
 }
 </script>
       <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1636576685" />
-      <script src="uikit-3.5.5/js/uikit.min.js?v=1636576685"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1636576685"></script>
+      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css?v=1636587934" />
+      <script src="uikit-3.5.5/js/uikit.min.js?v=1636587934"></script>
+      <script src="uikit-3.5.5/js/uikit-icons.min.js?v=1636587934"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1636576685"></script>
-      <script src="templates.js?v=1636576685"></script>
-      <script src="dom.js?v=1636576685"></script>
-      <script src="api.js?v=1636576685"></script>
-      <script src="commands.js?v=1636576685"></script>
-      <script src="index.js?v=1636576685"></script>
-      <script src="routing.js?v=1636576685"></script>
-      <script src="oldsbslib.js?v=1636576685"></script>
-      <script src="sbs2-markup/highlight.js?v=1636576685"></script>
-      <script src="sbs2-markup/parse.js?v=1636576685"></script>
-      <script src="sbs2-markup/render.js?v=1636576685"></script>
+      <script src="libbo.js?v=1636587934"></script>
+      <script src="templates.js?v=1636587934"></script>
+      <script src="dom.js?v=1636587934"></script>
+      <script src="api.js?v=1636587934"></script>
+      <script src="commands.js?v=1636587934"></script>
+      <script src="index.js?v=1636587934"></script>
+      <script src="routing.js?v=1636587934"></script>
+      <script src="oldsbslib.js?v=1636587934"></script>
+      <script src="sbs2-markup/highlight.js?v=1636587934"></script>
+      <script src="sbs2-markup/parse.js?v=1636587934"></script>
+      <script src="sbs2-markup/render.js?v=1636587934"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1636576685" />
-      <link rel="stylesheet" href="oldsbsstyle.css?v=1636576685" />
+      <link rel="stylesheet" href="index.css?v=1636587934" />
+      <link rel="stylesheet" href="oldsbsstyle.css?v=1636587934" />
       <style id="sitecss"></style>
       <script>
 (function() {
@@ -621,8 +621,13 @@ function leftpaneclick(event)
                </div>
                <div id="fileuploadbody" class="uk-modal-body">
                   <!--<h3 class="uk-heading-divider"><span>Upload</span></h3>-->
-                  <input type="text" class="uk-input" placeholder="Bucket (optional)" 
-                     name="bucket-name" autocomplete="on" id="fileuploadbucket">
+                  <div class="uk-flex">
+                     <input type="text" class="uk-input uk-width-expand" placeholder="Bucket (optional)" 
+                        name="bucket-name" autocomplete="on" id="fileuploadbucket">
+                     <input type="number" class="uk-input uk-width-1-4 uk-flex-none" 
+                        placeholder="Quantization (optional)" name="quantize" 
+                        autocomplete="on" id="fileuploadquantize">
+                  </div>
                   <div id="fileuploadform" class="uk-placeholder uk-text-center">
                      <span uk-icon="icon: cloud-upload"></span>
                      <span class="uk-text-middle">Drop image or</span>
